색상 테마 적용 및 출시 release 1.0.0

--- a/adhelper/src/main/res/layout/activity_ad_show.xml
+++ b/adhelper/src/main/res/layout/activity_ad_show.xml
@@ -5,7 +5,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="광고 로드 중 입니다."
+        android:text="광고를 불러오고 있습니다."
+        android:background="#FFE478"
         android:gravity="center"
         />
 
